fix reflection of Ehcache sizeof package